<resources>
<string name="app_name">AndroMedia</string>
<string name="topics_button">Topics button</string>
<string name="First_t1">
       Android is an open source and Linux-based operating system for mobile devices such as smartphones and tablet computers. Android was developed by the Open Handset Alliance, led by Google, and other companies.
    </string>
<string name="First_t2">
    Application components are the essential building blocks of an Android applica-tion. These components are loosely coupled by the application manifest file An-droidManifest.xml that describes each component of the application and how they inter-act.
    There are following four main components that can be used within an Android appli-cation −\n
    </string>
<string name="activities"><u><b>\nActivities</b></u></string>
<string name="Second_t2">
        \nAn activity represents a single screen with a user interface, in-short Ac-tivity performs actions on the screen. For example, an email application might have one activity that shows a list of new emails, another activity to compose an email, and another activity for reading emails. If an application has more than one activity, then one of them should be marked as the activity that is presented when the applica-tion is launched.
        \nAn activity is implemented as a subclass of Activity class as follows −\n
    </string>
<string name="code_example_1">
        "public class MainActivity extends Activity {}"
    </string>
<string name="services"><u><b>\nServices</b></u></string>
<string name="Third_t2">
        \nA service is a component that runs in the background to perform long-running operations. For example, a service might play music in the background while the user is in a different application, or it might fetch data over the network without block-ing user interaction with an activity.
        \nA service is implemented as a subclass of Service class as follows −\n
    </string>
<string name="code_example_2">
        "public class MyService extends Service {}"
    </string>
<string name="broadcast_receivers"><u><b>\nBroadcast Receivers</b></u></string>
<string name="Fourth_t2">
        \nBroadcast Receivers simply respond to broadcast messages from other applica-tions or from the system. For example, applications can also initiate broadcasts to let other applications know that some data has been downloaded to the device and is available for them to use, so this is broadcast receiver who will intercept this com-munication and will initiate appropriate action.
        \nA broadcast receiver is implemented as a subclass of BroadcastReceiver class and each message is broadcaster as an Intent object.\n
    </string>
<string name="code_example_3">
        "public class MyReceiver  extends  BroadcastReceiver {
            public void onReceive(context,intent){}
        }"
    </string>
<string name="content_providers"><u><b>\nContent Providers</b></u></string>
<string name="Fifth_t2">
        \nA content provider component supplies data from one application to others on request. Such requests are handled by the methods of the ContentResolver class. The data may be stored in the file system, the database or somewhere else entirely.
        \nA content provider is implemented as a subclass of ContentProvider class and must implement a standard set of APIs that enable other applications to perform trans-actions.\n
    </string>
<string name="code_example_4">
        "public class MyContentProvider extends  ContentProvider {
            public void onCreate(){}
        }"
    </string>
<string name="additional_components"><u><b>\nAdditional Compo-nents</b></u></string>
<string name="Sixth_t2">
"\nThere are additional components which will be used in the construction of above mentioned entities, their logic, and wiring between them. These components are −\n
Fragments\n
•  Represents a portion of user interface in an Activity.\n
Views\n
•  UI elements that are drawn on-screen including buttons, lists forms etc.\n
Layouts\n
•  View hierarchies that control screen format and appearance of the views.\n
Intents\n
•  Messages wiring components together.\n
Resources\n
•  External elements, such as strings, constants and drawable pictures.\n
Manifest\n
•  Configuration file for the application.\n"
    </string>
<string name="First_t3">
"Before you run your app, you should be aware of a few directories and files in the Android project −\n
Java\n
•  This contains the .java source files for your project. By default, it includes an MainActivity.java source file having an activity class that runs when your app is launched using the app icon.\n
res/drawable-hdpi\n
•  This is a directory for drawable objects that are designed for high-density screens.\n
res/layout\n
•  This is a directory for files that define your app's user interface.\n
res/values\n
•  This is a directory for other various XML files that contain a collection of resources, such as strings and colours definitions.\n
AndroidManifest.xml\n
•  This is the manifest file which describes the fundamental characteristics of the app and defines each of its components.\n
Build.gradle\n
•  This is an auto generated file which contains compileSdkVersion, buildTools-Version, applicationId, minSdkVersion, targetSdkVersion, versionCode and versionNam"
    </string>
<string name="Main_activity"><u><b>\nMain Activity</b></u></string>
<string name="Second_t3">
\nThe main activity code is a Java file MainActivity.java. This is the actual application file which ultimately gets converted to a Dalvik executable and runs your application. Following is the default code generated by the application wizard for Hello World! application −\n
</string>
<string name="code_example_1_t3">
        "package com.example.helloworld;

        import android.support.v7.app.AppCompatActivity;
        import android.os.Bundle;

        public class MainActivity extends AppCompatActivity {
        @Override
        protected void onCreate(Bundle savedInstanceState) {
            super.onCreate(savedInstanceState);
            setContentView(R.layout.activity_main);
        }
    }"
    </string>
<string name="Third_t3">
        Here, R.layout.activity_main refers to the activity_main.xml file located in the res/layout folder. The onCreate() method is one of many methods that are figured when an activity is loaded.\n
    </string>
<string name="Manifest_File"><u><b>\nManifest File</b></u></string>
<string name="Fourth_t3">
        \nWhatever component you develop as a part of your application, you must de-clare all its components in a manifest.xml which resides at the root of the applica-tion project directory. This file works as an interface between Android OS and your application, so if you do not declare your component in this file, then it will not be considered by the OS. For example, a default manifest file will look like as following file −\n
    </string>
<string name="code_example_2_t3">

        xml version="1.0" encoding="utf-8"?>
        manifest xmlns:android="http://schemas.android.com/apk/res/android"
            package="com.example.tutorialspoint7.myapplication"

   application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme"

      activity android:name=".MainActivity"
         intent-filter
            action android:name="android.intent.action.MAIN"
            category android:name="android.intent.category.LAUNCHER"
         intent-filter
      activity
    application
    manifest

    </string>
<string name="Fifth_t3">
       \nHere (application)(/application) tags enclosed the components related to the application. Attribute android:icon will point to the application icon available under res/drawable-hdpi. The application uses the image named ic launcher.png located in the drawable folders.\n
        \nThe (activity)(/activity) tag is used to specify an activity and android:name attribute specifies the fully qualified class name of the Activity subclass and the android:label attributes specifies a string to use as the label for the activity. You can specify multiple activities using activity> tags.\n
        \nThe action for the intent filter is named android.intent.action.MAIN to indi-cate that this activity serves as the entry point for the application. The category for the intent-filter is named android.intent.category.LAUNCHER to indicate that the application can be launched from the device\'s launcher icon.\n
        \nThe @string refers to the strings.xml file explained below. Hence, @string/app_name refers to the app_name string defined in the strings.xml file, which is "HelloWorld". Similar way, other strings get populated in the application.\n
        \nFollowing is the list of tags which you will use in your manifest file to specify different Android application components −\n
        •  (activity) elements for activities\n
        •  (service) elements for services\n
        •  (receiver) elements for broadcast receivers\n
        •  (provider) elements for content providers
    </string>
<string name="String_File"><u><b>\nString File</b></u></string>
<string name="Sixth_t3">\nThe strings.xml file is located in the res/values folder and it contains all the text that your application uses. For example, the names of buttons, labels, default text, and similar types of strings go into this file. This file is responsible for their textual content. For example, a default strings file will look like as following file −</string>
<string name="code_example_3_t3">
        "
       resources
            string name="app_name"HelloWorld string
            string name="hello_world"Hello world! string
            string name="menu_settings"Settings string
            string name="title_activity_main"MainActivity string
        resources
        "
    </string>
<string name="Layout_File"><u><b>Layout File</b></u></string>
<string name="Seventh_t3">\nThe activity_main.xml is a layout file available in res/layout directory, that is referenced by your application when building its inter-face. You will modify this file very frequently to change the layout of your applica-tion. For your "Hello World!" application, this file will have following content re-lated to default layout −\n</string>
<string name="code_example_4_t3">

        RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

   TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:padding="@dimen/padding_medium"
       android:text="@string/hello_world"
       tools:context=".MainActivity"
    RelativeLayout

    </string>
<string name="Eigth_t3">\nThis is an example of simple RelativeLayout which we will study in a separate chapter. The TextView is an Android control used to build the GUI and it have various attributes like android:layout_width, android:layout_height etc which are being used to set its width and height etc.. The @string refers to the strings.xml file located in the res/values folder. Hence, @string/hello_world refers to the hello string defined in the strings.xml file, which is "Hello World!".</string>
</resources>