<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_background"
    tools:context="com.example.jake.andromedia.Topic_2">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:onClick="backClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/back_btn"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:onClick="homeClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/home_btn"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Scroll_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/First_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Scroll_Text_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Second_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Scroll_Code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_example_1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text_Title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Third_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Scroll_Code2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_example_2"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text_Title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/broadcast_receivers"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fourth_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Scroll_Code3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_example_3"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text_Title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_providers"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fifth_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Scroll_Code4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_example_4"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text_Title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_components"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Scroll_Text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sixth_t2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/android"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/components_title"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
